Fixed bug preventing page from rendering on Firefox
- Added default values for attributes on img-luancher, since it was breaking the page in Firefox
- Added outline: none for anchor tags in core-items so that they don't show up on focus in Firefox
- Removed unused code for app-crumb which was removed
- Fixed title not updating in Firefox

--- a/css/style.css
+++ b/css/style.css
@@ -84,20 +84,6 @@ paper-button {
     font-weight: bold;
 }
 
-app-crumb {
-    display: block;
-
-    margin: 10px 10px;
-}
-
-app-crumb::shadow .crumb:not(:last-of-type):after {
-    content: ">";
-    vertical-align: middle;
-    margin: 0 5px;
-
-    pointer-events: none;
-}
-
-app-crumb::shadow .crumb:hover {
-    background-color: #fff;
+core-item a {
+    outline: none;
 }
